# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../../config.gni")

module_output_path = "multimedia_av_session/ndk"

common_deps = [
  "../../../ohavsession:ohavsession",
  "../../../session:avsession_client",
]

common_external_deps = [
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:wantagent_innerkits",
  "audio_framework:audio_client",
  "c_utils:utils",
  "curl:curl_shared",
  "googletest:gtest",
  "hilog:libhilog",
  "image_framework:image",
  "image_framework:image_native",
  "input:libmmi-client",
  "ipc:ipc_single",
  "samgr:samgr_proxy",
]

ohos_unittest("OHAVMetadataBuilderTest") {
  install_enable = true
  visibility = [ ":*" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "../../../../../interfaces/inner_api/native/session/include",
    "../../../../../interfaces/kits/c",
    "../../include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [ "./oh_av_metadata_builder_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  module_out_path = module_output_path
}

ohos_unittest("OHAVSessionCallbackImplTest") {
  install_enable = true
  visibility = [ ":*" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "../../../../../interfaces/inner_api/native/session/include",
    "../../../../../interfaces/kits/c",
    "../../include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [ "./oh_av_session_callbackimpl_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  module_out_path = module_output_path
}

ohos_unittest("OHAVSessionTest") {
  install_enable = true
  visibility = [ ":*" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "../../../../../interfaces/inner_api/native/session/include",
    "../../../../../interfaces/kits/c",
    "../../include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [ "./oh_av_session_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  module_out_path = module_output_path
}

group("oh_av_session_unittest") {
  testonly = true
  deps = [
    ":OHAVMetadataBuilderTest",
    ":OHAVSessionCallbackImplTest",
    ":OHAVSessionTest",
  ]
}
